# Core-4

./: .gitignore  CMakeLists.txt  PRESENTATION_SCRIPT.txt  Readme.md  cannon.py  cpp_output.json  cpp_output_new.txt  db_benchmark.py  docker-compose.yml  get_dsn.py  go.work  java_output.json  java_output.txt  pyproject.toml  setup_test.py  test.py
.github/workflows/: pypi-publish.yml
Mobileapp/: App.js  app.json  package-lock.json  package.json
Mobileapp/src/components/: EmptyState.js  Loader.js  StatusBadge.js
Mobileapp/src/context/: AuthContext.js
Mobileapp/src/hooks/: useAuth.js  useFetch.js
Mobileapp/src/navigation/: AppNavigator.js
Mobileapp/src/screens/: DashboardScreen.js  IssueDetailScreen.js  IssuesScreen.js  ProjectDetailScreen.js  ProjectsScreen.js  (+1 more)
UserSdk/: __init__.py  client.py  handlers.py  hub.py  transport.py  utils.py
alltestcases/: TracelifyTest.java  TracelifyTest.kt  go.mod  run_scripts.md  test_cpp  test_cpp.cpp  test_go.go  test_js.js  test_sdk.py
backend/: .dockerignore  Dockerfile  README.md  check.py  check2.py  db_schema.sql  latency_check.py  main.py  optimize_indexes.sql  requirements.txt  seed_alert_rule.py  test_apis.py  test_email.py  test_llm.py  test_sdk.py
backend/app/: __init__.py
backend/reports/: tracelify_report_20260405_040959.md  tracelify_report_20260405_040959_raw.json  tracelify_report_20260405_043419.md  tracelify_report_20260405_043419_raw.json  tracelify_report_20260405_043501.md  tracelify_report_20260405_043501_raw.json
cpp/: CMakeLists.txt  tracelify_test
cpp/include/: tracelify.h
cpp/src/: test.cpp  tracelify.cpp  tracelify_unit_test.cpp
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/tracelify-app/: index.html  package-lock.json  package.json  tailwind.config.js
go/: go.mod
go/tracelify/: tracelify.go
java/: .gitignore  pom.xml
javascript/src/: tracelify.js
tracelify/: client.py  config.py  handlers.py  queue.py  transport.py  utils.py  worker.py
tracelify_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
user_sdk/: client.py  config.py  scope.py  transport.py  worker.py
(+96 files in other folders)
